chromeos: makes InputMethodMus notify observers when caret bounds change

Which is used in some tests.

BUG=889101
TEST=covered by tests

Change-Id: I74e191dd1bb7576d382e57b10f119bb4f6d4457b
Reviewed-on: https://chromium-review.googlesource.com/c/1297404
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602171}
Former-commit-id: 888842918959fc9f3e4028fd9c43702711fd9298